--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pwa-javascript",
+  "homepage": "https://marcelo-site.github.io/starter-project/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
