--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pwa-javascript",
-  "homepage": "https://marcelo-site.github.io/starter-project/",
+  "homepage": "https://marcelo-site.github.io/pwa-javascript/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
