--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pwa-javascript",
   "homepage": "https://marcelo-site.github.io/pwa-javascript/",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
